Created Api update and delete promotion product